test/cli/test/deny-pod-deletion/deny-pod-deletion.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: deny-pod-deletion
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: deny-pod-deletion
      match:
        any:
        - resources:
            kinds:
              - Pod
      validate:
        message: Pod cannot be deleted
        deny:
          conditions:
            any:
              - key: "{{request.operation}}"
                operator: Equals
                value: DELETE
