test/cli/test/deny-pod-deletion/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-delete
  namespace: test-namespace
---
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-create
  namespace: test-namespace
---
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-update
  namespace: test-namespace
