test/cli/test/deny-pod-deletion/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: deny-pod-deletion-test
policies:
- deny-pod-deletion.yaml
resources:
- resources.yaml
variables: values.yaml
results:
- kind: Pod
  namespace: test-namespace
  policy: deny-pod-deletion
  rule: deny-pod-deletion
  resources:
      - test-pod-delete
  result: fail
- kind: Pod
  namespace: test-namespace
  policy: deny-pod-deletion
  rule: deny-pod-deletion
  resources:
    - test-pod-create
    - test-pod-update
  result: pass
