test/cli/test/deny-pod-deletion/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
policies:
- name: deny-pod-deletion
  resources:
  - name: test-pod-delete
    values:
      request.operation: DELETE
  - name: test-pod-update
    values:
      request.operation: UPDATE
